--- a/src/style.sass
+++ b/src/style.sass
@@ -119,7 +119,7 @@ select
     overflow-y: scroll
 
 #hands.small
-    height: 30%
+    height: 50%
 
 #hands.big
     height: 90%
@@ -165,13 +165,13 @@ select
     text-align: center
     display: inline-block
 
-#error
+#errors
     display: block
     position: fixed
-    line-height: 3em
     bottom: 0
+    left: 0
     width: 100%
     padding: 1%
     text-align: center
-    background: $red
+    background-color: $red
     color: $white
